--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,11 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
-    "nasa": "file:..",
-    "pm2": "^5.2.0",
-    "supertest": "^6.2.4"
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
     "jest": "^28.1.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
